# time-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml
backend/app/adapters/persistence/: base_repository.py  database.py  leave_request_repository.py  time_entry_repository.py  user_repository.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  leave_requests.py  router.py  time_entries.py  users.py
backend/app/core/: config.py  security.py
backend/app/domain/models/: audit_log.py  base.py  holiday_calendar.py  leave_request.py  time_entry.py  user.py
backend/app/domain/schemas/: leave_request.py  time_entry.py  token.py  user.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css  index.jsx
frontend/src/components/auth/: LoginForm.jsx  ProtectedRoute.jsx  RefreshTokenHandler.jsx
frontend/src/components/layout/: IdleTimer.jsx  MainLayout.jsx  SideNav.jsx  TopBar.jsx
frontend/src/pages/Admin/: AdminDashboard.jsx  AdminSettings.jsx  UserManagement.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx  DashboardHeader.jsx  LeaveBalanceCard.jsx  OvertimeWidget.jsx  TimeBalanceCard.jsx  TimeTrackerCard.jsx  WorkingHoursChart.jsx
frontend/src/pages/LeaveManagement/: LeaveCalendar.jsx  LeaveManagementPage.jsx  LeaveRequestsTable.jsx
frontend/src/pages/TimeTracking/: TimeEntriesTable.jsx  TimeTracker.jsx  TimeTrackingPage.jsx
frontend/src/store/services/: analyticsApi.js  leaveRequestsApi.js  timeEntriesApi.js  (+1 more)
